Added the photo button to the create quiz page

--- a/Front-end/app/src/main/res/layout/activity_create_quiz.xml
+++ b/Front-end/app/src/main/res/layout/activity_create_quiz.xml
@@ -63,12 +63,6 @@
                         tools:layout_conversion_absoluteHeight="19dp"
                         tools:layout_conversion_absoluteWidth="200dp" />
 
-                    <CheckBox
-                        android:id="@+id/question_has_pic"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="is pic" />
-
                     <Button
                         android:id="@+id/question_input_button"
                         android:layout_width="wrap_content"
@@ -79,7 +73,23 @@
 
                 <TableRow
                     android:layout_width="0dp"
-                    android:layout_height="0dp" />
+                    android:layout_height="0dp"
+                    android:gravity="center">
+
+                    <CheckBox
+                        android:id="@+id/question_has_pic"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="is pic" />
+
+                    <ImageButton
+                        android:id="@+id/take_picture_button"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@android:drawable/ic_menu_camera"
+                        tools:layout_conversion_absoluteHeight="0dp"
+                        tools:layout_conversion_absoluteWidth="24dp" />
+                </TableRow>
 
                 <TableRow
                     android:layout_width="0dp"
@@ -93,6 +103,7 @@
                         tools:layout_conversion_absoluteHeight="0dp"
                         tools:layout_conversion_absoluteWidth="24dp"
                         android:src="@drawable/ic_baseline_add_24"/>
+
                 </TableRow>
 
             </TableLayout>
