--- a/Front-end/app/src/main/res/layout/activity_create_quiz.xml
+++ b/Front-end/app/src/main/res/layout/activity_create_quiz.xml
@@ -1,114 +1,110 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/question_create_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".quizactivities.CreateQuizActivity">
 
-    <ScrollView
-        android:id="@+id/scrollView2"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        tools:visibility="visible">
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:text="@string/UI_select_course_category_msg"
+            tools:layout_conversion_absoluteHeight="19dp"
+            tools:layout_conversion_absoluteWidth="200dp" />
 
-            <TableLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
+        <Spinner
+            android:id="@+id/category_list"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:layout_conversion_absoluteHeight="0dp"
+            tools:layout_conversion_absoluteWidth="48dp" />
+    </LinearLayout>
 
-                <TableRow
-                    android:id="@+id/tableRow"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        tools:visibility="visible">
 
-                    <TextView
-                        android:id="@+id/textView3"
-                        android:layout_width="150dp"
-                        android:layout_height="wrap_content"
-                        android:text="@string/UI_select_course_category_msg"
-                        tools:layout_conversion_absoluteHeight="19dp"
-                        tools:layout_conversion_absoluteWidth="200dp" />
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:width="100dp"
+            android:text="@string/UI_question"
+            tools:layout_conversion_absoluteHeight="19dp"
+            tools:layout_conversion_absoluteWidth="200dp" />
 
-                    <Spinner
-                        android:id="@+id/category_list"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        tools:layout_conversion_absoluteHeight="0dp"
-                        tools:layout_conversion_absoluteWidth="48dp" />
+        <EditText
+            android:id="@+id/question_input"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:text="text" />
+    </LinearLayout>
 
-                </TableRow>
+    <LinearLayout
+        android:id="@+id/take_picture_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        tools:visibility="visible">
 
-                <TableRow
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center">
+        <CheckBox
+            android:id="@+id/question_has_pic"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="is pic" />
 
-                    <TextView
-                        android:id="@+id/textView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:width="100dp"
-                        android:text="@string/UI_question"
-                        tools:layout_conversion_absoluteHeight="19dp"
-                        tools:layout_conversion_absoluteWidth="200dp" />
+        <ImageButton
+            android:id="@+id/take_picture_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@android:drawable/ic_menu_camera"
+            tools:layout_conversion_absoluteHeight="0dp"
+            tools:layout_conversion_absoluteWidth="24dp" />
 
-                    <Button
-                        android:id="@+id/question_input_button"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Create" />
+    </LinearLayout>
 
-                </TableRow>
+    <ImageView
+        android:id="@+id/pic_preview"
+        android:layout_width="wrap_content"
+        android:layout_height="125dp"
+        android:layout_weight="0"
+        android:verticalScrollbarPosition="left"
+        app:srcCompat="@drawable/math" />
 
-                <TableRow
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:gravity="center">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        tools:visibility="visible">
 
-                    <CheckBox
-                        android:id="@+id/question_has_pic"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="is pic" />
+        <Button
+            android:id="@+id/answer_input_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Create answer" />
+    </LinearLayout>
 
-                    <ImageButton
-                        android:id="@+id/take_picture_button"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@android:drawable/ic_menu_camera"
-                        tools:layout_conversion_absoluteHeight="0dp"
-                        tools:layout_conversion_absoluteWidth="24dp" />
-                </TableRow>
+    <ImageButton
+        android:id="@+id/add_question_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_baseline_add_24"
+        tools:layout_conversion_absoluteHeight="0dp"
+        tools:layout_conversion_absoluteWidth="24dp" />
 
-                <TableRow
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:gravity="center">
-
-                    <ImageButton
-                        android:id="@+id/add_question_button"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        tools:layout_conversion_absoluteHeight="0dp"
-                        tools:layout_conversion_absoluteWidth="24dp"
-                        android:src="@drawable/ic_baseline_add_24"/>
-
-                </TableRow>
-
-            </TableLayout>
-
-        </androidx.cardview.widget.CardView>
-    </ScrollView>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
