--- a/Front-end/app/src/main/res/layout/fragment_profile.xml
+++ b/Front-end/app/src/main/res/layout/fragment_profile.xml
@@ -72,13 +72,14 @@
                 <TextView
                     android:layout_height="wrap_content"
                     android:layout_column="0"
-                    android:text="Push notification"
+                    android:text="@string/UI_push_notification"
                     android:textSize="15sp"
                     android:layout_gravity="center" />
 
-                <CheckBox
+                <Spinner
                     android:layout_height="wrap_content"
-                    android:id="@+id/notification_set" />
+                    android:layout_width="wrap_content"
+                    android:id="@+id/notification_settings" />
             </TableRow>
         </TableLayout>
 
