--- a/Front-end/app/src/main/res/layout/activity_create_quiz.xml
+++ b/Front-end/app/src/main/res/layout/activity_create_quiz.xml
@@ -90,7 +90,7 @@
         android:id="@+id/answers_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         tools:visibility="visible" />
 
     <LinearLayout
