--- a/Front-end/app/src/main/res/layout/activity_quiz.xml
+++ b/Front-end/app/src/main/res/layout/activity_quiz.xml
@@ -61,6 +61,7 @@
                 android:layout_height="match_parent"
                 android:layout_marginStart="30dp"
                 android:layout_marginEnd="30dp"
+                android:background="@drawable/round_corner_button"
                 android:text="@string/UI_submit" />
         </LinearLayout>
     </RelativeLayout>
