--- a/Front-end/app/src/main/res/layout/activity_quiz_finished.xml
+++ b/Front-end/app/src/main/res/layout/activity_quiz_finished.xml
@@ -45,10 +45,12 @@
 
         <Button
             android:id="@+id/quiz_finished_page_button"
+            android:layout_margin="20sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="10dp"
+            android:background="@drawable/round_corner_button"
             android:text="@string/UI_back_to_main_menu" />
 
     </RelativeLayout>
