--- a/Front-end/app/src/main/res/layout/fragment_leaderboard.xml
+++ b/Front-end/app/src/main/res/layout/fragment_leaderboard.xml
@@ -22,7 +22,7 @@
                 android:text="@string/leader_board_page_text1" />
 
             <TextView
-                android:id="@+id/statistic_test_text"
+                android:id="@+id/statistic_time_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
