--- a/Front-end/app/src/main/res/layout/fragment_class_statistic.xml
+++ b/Front-end/app/src/main/res/layout/fragment_class_statistic.xml
@@ -43,7 +43,7 @@
 
                 <TableLayout
                     android:id="@+id/class_statistic_board"
-                    android:layout_width="wrap_content"
+                    android:layout_width="300dp"
                     android:layout_height="wrap_content"
                     android:layout_margin="20sp"
                     android:background="@drawable/textview_rect_border">
