--- a/Front-end/app/src/main/res/layout/fragment_quiz.xml
+++ b/Front-end/app/src/main/res/layout/fragment_quiz.xml
@@ -28,6 +28,15 @@
                     android:gravity="center"
                     android:text="@string/quiz_fragment_debug_text" />
 
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:layout_margin="10dp"
+                    android:id="@+id/quiz_page_class_info_text"
+                    android:text="@string/UI_current_class_name"/>
+
                 <Button
                     android:id="@+id/quiz_fragment_go_to_quiz_button"
                     android:layout_width="wrap_content"
