--- a/Front-end/app/src/main/res/layout/fragment_quiz_teacher.xml
+++ b/Front-end/app/src/main/res/layout/fragment_quiz_teacher.xml
@@ -65,7 +65,7 @@
         tools:ignore="VectorDrawableCompat" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/edit_fab"
+        android:id="@+id/module_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
@@ -78,11 +78,11 @@
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@id/fab"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/ic_baseline_edit_24"
+        app:srcCompat="@drawable/ic_baseline_notes_24"
         tools:ignore="VectorDrawableCompat" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/note_fab"
+        android:id="@+id/edit_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
@@ -93,8 +93,9 @@
         android:focusable="true"
         android:tint="@color/common_google_signin_btn_tint"
         android:visibility="invisible"
-        app:layout_constraintBottom_toTopOf="@id/edit_fab"
+        app:layout_constraintBottom_toTopOf="@id/module_fab"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/ic_baseline_notes_24"
+        app:srcCompat="@drawable/ic_baseline_edit_24"
         tools:ignore="VectorDrawableCompat" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
